fix long poll not wrapping

--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
@@ -165,3 +165,7 @@
 .isPoll {
   bottom: var(--border-size-large);
 }
+
+.pollLine {
+  overflow-wrap: break-word;
+}
